--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,6 +7,15 @@
     <title>Vite App</title>
   </head>
   <body>
+    <form>
+      <input
+        type="text"
+        name="search-weather-input"
+        id="search-weather-input"
+      />
+      <button type="submit" id="search-weather-btn">Search</button>
+    </form>
+
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
