--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Vite App</title>
   </head>
   <body>
-    <form>
+    <form id="form-weather">
       <input
         type="text"
         name="search-weather-input"
         id="search-weather-input"
       />
-      <button type="submit" id="search-weather-btn">Search</button>
+      <button type="submit">Search</button>
     </form>
 
     <div id="app"></div>
